# neonfetch

./: AGENTS.md  Cargo.toml  README.md  fire.mov  matrix.mov  neon.mov  wave.mov
.github/workflows/: ci.yml  release.yml
examples/: custom-logo.txt
src/: config.rs  main.rs
src/animation/: aurora.rs  comet.rs  embers.rs  fall.rs  fire.rs  kaleidoscope.rs  lava.rs  marquee.rs  matrix.rs  meteor.rs  meteor_rain.rs  mod.rs  palette.rs  plasma.rs  pulse_rings.rs  rainbow_outline.rs  styles.rs
src/system/: info.rs  logo_default.rs  logo_distro.rs  logo_linux.rs  logo_macos.rs  mod.rs
src/util/: ansi.rs  framebuf.rs  mod.rs
tests/: config.rs  smoke.rs
