[package]
name = "neonfetch"
version = "0.1.0"
edition = "2024"
description = "Fast colorful animated system info fetch tool with multiple ANSI animation styles"
license = "MIT"
repository = "https://github.com/oriys/neonfetch"
homepage = "https://github.com/oriys/neonfetch"
readme = "README.md"

[dependencies]
crossterm = "0.27"
atty = "0.2"
regex = "1.10"
sysinfo = "0.32"
fastrand = "2.1"
get_if_addrs = "0.5"
libc = { version = "0.2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"