[package]
name = "neonfetch"
version = "0.1.0"
edition = "2024"
description = "Fast colorful animated system info fetch tool with multiple ANSI animation styles"
license = "MIT"
repository = "https://github.com/oriys/neonfetch"
homepage = "https://github.com/oriys/neonfetch"
readme = "README.md"

[dependencies]
crossterm = "0.29.0"
atty = "0.2.14"
regex = "1.12.2"
sysinfo = "0.37.2"
fastrand = "2.3.0"
get_if_addrs = "0.5.3"
libc = { version = "0.2.178", optional = true }
serde_json = "1.0.145"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.178"
