[package]
name = "neonfetch"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Fast colorful animated system info fetch tool with multiple ANSI animation styles"
license = "MIT"
repository = "https://github.com/oriys/neonfetch"
homepage = "https://github.com/oriys/neonfetch"
readme = "README.md"

[dependencies]
crossterm = "0.29.0"
sysinfo = "0.39.5"
fastrand = "2.4.1"
get_if_addrs = "0.5.3"
libc = { version = "0.2.186", optional = true }
serde_json = "1.0.150"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.186"
